[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "upnqr"
version = "0.1.0"
description = "A module for generating UPN QR codes."
authors = ["shrx <differenxe@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "*"
qrcodegen = "*"
Pillow = "*"

[tool.poetry.dev-dependencies]
# Add any development dependencies here
