[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upnqr"
version = "0.1.0"
description = "A module for generating UPN QR codes."
authors = [
    {name = "shrx", email = "differenxe@gmail.com"}
]
license = {text = "GPL3"}
requires-python = ">=3.7"
dependencies = [
    "pydantic",
    "qrcodegen",
    "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/shrx/upnqr"
